--- a/remotes/test/src/index.html
+++ b/remotes/test/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>repro-host</title>
+    <title>remotes-test</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <nx-repro-root></nx-repro-root>
+    <nx-repro-remotes-test-entry></nx-repro-remotes-test-entry>
   </body>
 </html>
